Ensure that codestyle.py always returns something on stdout to unlock m_mutex.

By returning only a "0" size on stdout, pythonstylechecking.cpp will
 see a "reply" and unlock the m_mutex.

This avoids serious UI hangs when the stylechecker is enabled but
 `pycodestyle` is not installed.

BUG: 392031
Differential Revision: https://phabricator.kde.org/D11474